--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -7,11 +7,12 @@
   color: white;
   font-size: 1.8rem;
 }
+
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-row: 1fr 1fr;
-  height: 80vh;
+  height: 80%;
   row-gap: 40px;
   margin-top: 10px;
 
