--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,8 +1,8 @@
 .Title-container {
   height: 92vh;
-  background-color: rgb(34, 32, 32);
+  background-color: rgb(193, 189, 189);
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 .title-left {
@@ -18,11 +18,12 @@
   text-align: start;
   font-weight: 500;
   color: white;
+  font-size: 1.2rem;
 }
 .title-info span {
   color: rgb(87, 128, 211);
   font-weight: bolder;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 .title-right {
   height: 200px;
@@ -59,5 +60,9 @@
   font-size: 4rem;
   letter-spacing: 4px;
   font-weight: bolder;
-  color: white;
+  color: rgb(109, 131, 242);
+}
+.hero-img {
+  width: 300px;
+  height: 300px;
 }
