--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,6 @@
 .nav-bar {
-  background-color: rgb(50, 55, 50);
+  background-color: white;
+
   height: 8vh;
   display: flex;
   justify-content: space-between;
@@ -12,14 +13,23 @@
   justify-content: space-evenly;
   align-items: center;
   font-size: 1rem;
-
   color: white;
 }
-
+.nav-link-list {
+  color: rgb(109, 131, 242);
+  text-decoration: none;
+  font-weight: bolder;
+}
+.nav-link-list:hover {
+  border-bottom: solid 0.2rem rgb(109, 131, 242);
+}
 .nav-hire-btn {
-  height: 20px;
+  height: 30px;
   width: 80px;
   border-radius: 5px;
   border-style: none;
   font-size: 1rem;
+}
+.nav-hire-btn:hover {
+  background-color: rgb(66, 88, 198);
 }
