--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -1,6 +1,6 @@
 .skcon {
   height: 700px;
-  background-color: rgb(16, 15, 15);
+  background-color: black;
   padding: 20px;
   display: flex;
   flex-direction: column;
@@ -22,6 +22,15 @@
 .skills-list {
   width: 250px;
   height: 150px;
-  background-color: rgb(52, 51, 51);
+  background-color: white;
   border-radius: 10px;
+  box-shadow: 0 0px 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.icon-frame {
+  font-size: 5rem;
+  color: rgb(87, 128, 211);
 }
