--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer-container {
-  height: 200px;
+  height: 100px;
   background-color: black;
   display: flex;
   flex-direction: column;
@@ -9,11 +9,11 @@
 .socials {
   display: flex;
   justify-content: space-evenly;
-  width: 500px;
+  width: 400px;
 }
 .socialscircle {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   border-radius: 50px;
   display: flex;
   justify-content: center;
@@ -24,13 +24,17 @@
 }
 .social {
   font-size: 1.2rem;
-  color: red;
+  color: rgb(87, 128, 211);
 }
 .socialscircle:hover {
   background-color: rgba(255, 255, 255, 0.65);
-  border: 1px red solid;
+  border: 1px rgb(87, 128, 211) solid;
   font-size: 1.3;
+  color: black;
 }
 .designed {
   color: white;
+}
+.anthony {
+  color: rgb(87, 128, 211);
 }
