--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -1,6 +1,6 @@
 .skcon {
   height: 700px;
-  background-color: black;
+  background-color: rgb(175, 175, 175);
   padding: 20px;
   display: flex;
   flex-direction: column;
