--- a/src/components/Contacts.css
+++ b/src/components/Contacts.css
@@ -7,6 +7,7 @@
 
 .chat-left h3 {
   font-size: 3rem;
+  color: rgb(109, 131, 242);
 }
 .chat-text {
   font-size: 2rem;
@@ -71,4 +72,45 @@ form {
   cursor: pointer;
   color: white;
   font-size: 1rem;
+}
+@media all and (max-width: 800px) {
+  .chat-left h3 {
+    font-size: 2rem;
+  }
+  .chat-text p {
+    font-size: 1rem;
+  }
+  form {
+    width: 300px;
+    height: 300px;
+  }
+  .form-name-email {
+    display: flex;
+    flex-direction: column;
+  }
+  .name-email {
+    display: flex;
+  }
+  .field-tabs p {
+    font-size: 1rem;
+  }
+
+  .field1 {
+    height: 25px;
+    width: 300px;
+  }
+  .field2 {
+    height: 100px;
+  }
+  .fieldsubmit {
+    height: 30px;
+    width: 150px;
+  }
+  .submitbtn {
+    font-size: 0.8rem;
+    font-weight: bolder;
+  }
+  .envelope {
+    font-size: 0.7rem;
+  }
 }
