--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,11 +1,12 @@
 .footer-container {
-  height: 100px;
+  height: 175px;
   background-color: black;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
 }
+
 .socials {
   display: flex;
   justify-content: space-evenly;
@@ -31,6 +32,7 @@
   border: 1px rgb(87, 128, 211) solid;
   font-size: 1.3;
   color: black;
+  transition: 0.2ms;
 }
 .designed {
   color: white;
