--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -24,7 +24,7 @@
   border-bottom: solid 0.2rem rgb(109, 131, 242);
 }
 .nav-hire-btn {
-  height: 30px;
+  height: 20px;
   width: 80px;
   border-radius: 5px;
   border-style: none;
@@ -32,4 +32,37 @@
 }
 .nav-hire-btn:hover {
   background-color: rgb(66, 88, 198);
+}
+
+@media all and (max-width: 800px) {
+  .links {
+    font-size: 0.8rem;
+  }
+  .nav-hire-btn {
+    height: 20px;
+  }
+}
+
+@media all and (max-width: 480px) {
+  .nav-bar {
+    height: 170px;
+    background-color: rgb(245, 245, 245);
+  }
+  .logo {
+    display: none;
+  }
+  .links {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    height: 100%;
+  }
+  .nav-link-list {
+    font-size: 1.2rem;
+    border-bottom: solid 0.2px black;
+  }
+  .nav-hire-btn {
+    display: none;
+  }
 }
