--- a/src/components/Contacts.css
+++ b/src/components/Contacts.css
@@ -114,3 +114,11 @@ form {
     font-size: 0.7rem;
   }
 }
+
+@media all and (max-width: 480px) {
+  .chat-form {
+    display: flex;
+    flex-direction: column;
+    height: 500px;
+  }
+}
