--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -30,6 +30,11 @@
   justify-content: center;
   align-items: center;
 }
+
+.skills-list h3 {
+  font-size: 1rem;
+  color: rgb(87, 128, 211);
+}
 .icon-frame {
   font-size: 5rem;
   color: rgb(87, 128, 211);
@@ -42,7 +47,17 @@
   .icons {
     font-size: 3rem;
   }
-  .fieldsubmit {
-    height: 20px;
+}
+@media all and (max-width: 480px) {
+  .skcon {
+    height: 400px;
+  }
+
+  .skills-list {
+    height: 75px;
+    width: 75px;
+  }
+  .icons {
+    font-size: 3rem;
   }
 }
