--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 * {
   margin: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
 .App {
   text-align: center;
 }
