--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,12 +1,16 @@
 .abt {
-  height: 300px;
+  height: 600px;
   background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
 }
 .abt h3 {
-  font-size: 1.8rem;
+  font-size: 3rem;
+}
+
+.inner-about p {
+  font-size: 1.5rem;
 }
 @media all and (max-width: 800px) {
   .inner-about {
