--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -2,7 +2,7 @@
   height: 92vh;
   background-color: rgb(193, 189, 189);
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
 }
 .title-left {
@@ -12,18 +12,28 @@
   align-items: flex-start;
   padding-left: 20px;
 }
+.img-title {
+  border-radius: 18% 82% 70% 30% / 50% 37% 63% 50%;
+  background-color: rgb(47, 66, 125);
+  height: 600px;
+  width: 700px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .title-info {
-  width: 400px;
+  width: 800px;
   text-align: start;
   font-weight: 500;
   color: white;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
+  letter-spacing: 3px;
 }
 .title-info span {
   color: rgb(87, 128, 211);
   font-weight: bolder;
-  font-size: 1.1rem;
+  font-size: 1.5rem;
 }
 .title-right {
   height: 200px;
@@ -48,10 +58,11 @@
   );
   border-style: none;
   border-radius: 5px;
-  font-size: 0.8rem;
+  font-size: 1rem;
   letter-spacing: 1px;
   color: white;
   cursor: pointer;
+  letter-spacing: 3px;
 }
 .hire-me-btn:hover {
   opacity: 0.6;
@@ -63,8 +74,8 @@
   color: rgb(109, 131, 242);
 }
 .hero-img {
-  width: 300px;
-  height: 300px;
+  width: 600px;
+  height: 600px;
 }
 
 @media all and (max-width: 800px) {
