--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -7,31 +7,48 @@
   align-items: center;
   padding-left: 40px;
 }
+.logo-con {
+  position: relative;
+  align-items: center;
+}
+.develop {
+  position: absolute;
+  font-size: 2rem;
+  color: rgb(66, 88, 198);
+  left: 145px;
+}
+.logo {
+  font-size: 1.5rem;
+  font-weight: bolder;
+}
 .links {
   width: 500px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  font-size: 1rem;
+  font-size: 1.4rem;
   color: white;
 }
 .nav-link-list {
   color: rgb(109, 131, 242);
   text-decoration: none;
   font-weight: bolder;
+  font-size: 1.4rem;
 }
 .nav-link-list:hover {
   border-bottom: solid 0.2rem rgb(109, 131, 242);
+  color: white;
 }
 .nav-hire-btn {
-  height: 20px;
-  width: 80px;
+  height: 40px;
+  width: 10a0px;
   border-radius: 5px;
   border-style: none;
   font-size: 1rem;
 }
 .nav-hire-btn:hover {
   background-color: rgb(66, 88, 198);
+  color: white;
 }
 
 @media all and (max-width: 800px) {
