--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -5,23 +5,24 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  align-items: center;
 }
-.skcon h2 {
+.skcon h3 {
   color: white;
-  font-size: 1.8rem;
+  font-size: 3rem;
 }
 
 .container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   row-gap: 40px;
-
+  width: 1200px;
   align-items: center;
   justify-items: center;
 }
 .skills-list {
   width: 250px;
-  height: 150px;
+  height: 170px;
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 0px 8px;
@@ -32,7 +33,7 @@
 }
 
 .skills-list h3 {
-  font-size: 1rem;
+  font-size: 1.5rem;
   color: rgb(87, 128, 211);
 }
 .icon-frame {
