--- a/src/components/About.css
+++ b/src/components/About.css
@@ -4,13 +4,16 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  align-items: center;
 }
 .abt h3 {
-  font-size: 3rem;
+  font-size: 2rem;
+  letter-spacing: 4px;
 }
 
 .inner-about p {
   font-size: 1.5rem;
+  width: 700px;
 }
 @media all and (max-width: 800px) {
   .inner-about {
