--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,7 @@
 .nav-bar {
   background-color: white;
 
-  height: 8vh;
+  height: 15vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -22,21 +22,23 @@
   font-weight: bolder;
 }
 .links {
-  width: 500px;
+  width: 700px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   color: white;
 }
 .nav-link-list {
   color: rgb(109, 131, 242);
   text-decoration: none;
   font-weight: bolder;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
 }
 .nav-link-list:hover {
   border-bottom: solid 0.2rem rgb(109, 131, 242);
+}
+.nll-hire:hover {
   color: white;
 }
 .nav-hire-btn {
