--- a/src/components/About.css
+++ b/src/components/About.css
@@ -15,14 +15,14 @@
   font-size: 1.5rem;
   width: 700px;
 }
-@media all and (max-width: 800px) {
+@media all and (max-width: 600px) {
   .inner-about {
     display: flex;
     justify-content: center;
   }
   .inner-about p {
     width: 500px;
-    text-align: center;
+    text-align: start;
   }
 }
 @media all and (max-width: 480px) {
@@ -31,7 +31,8 @@
     justify-content: center;
   }
   .inner-about p {
-    width: 400px;
-    text-align: center;
+    width: 350px;
+    text-align: start;
+    padding-left: 20px;
   }
 }
