--- a/src/components/Contacts.css
+++ b/src/components/Contacts.css
@@ -73,7 +73,7 @@ form {
   color: white;
   font-size: 1rem;
 }
-@media all and (max-width: 800px) {
+@media all and (max-width: 600px) {
   .chat-left h3 {
     font-size: 2rem;
   }
@@ -120,5 +120,6 @@ form {
     display: flex;
     flex-direction: column;
     height: 500px;
+    margin-top: 100px;
   }
 }
